# easy-svg

./: .gitignore  Cargo.toml  README.md  build.rs  svg_elements.yml
.github/workflows/: rust-clippy-check.yml  rust-format.yml
examples/: basic.rs  basic_usage.rs
src/: circle.rs  color.rs  generated.rs  lib.rs  line.rs  linecaps.rs  macros.rs  path.rs  path_data.rs  rect.rs  svg.rs  svg_element.rs  target.rs  text.rs
src/types/: color.rs  length.rs  mod.rs  percentage.rs  preserve_aspect_ratio.rs  target.rs  viewbox_size.rs
src/types/unions/: auto_or_length_or_percentage.rs  length_or_percentage.rs  mod.rs
tests/: tests.rs
