[package]
name = "easy-svg"
version = "0.1.1"
edition = "2024"
authors = ["effdotsh"]
license-file = "LICENSE"
description = "Author SVGs in Rust through a statically typed system"
homepage = "https://github.com/effdotsh/easy-svg"
readme = "README.md"
repository = "https://github.com/effdotsh/easy-svg"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"

[lints.rust]
unused_variables = "deny"
#dead_code = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
cognitive_complexity = "warn"
new_without_default = { level = "deny", priority = 2 }

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syn = "2.0.106"
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
indexmap = "2.11.0"